--- a/_posts/2020-10-22-git.md
+++ b/_posts/2020-10-22-git.md
@@ -12,11 +12,11 @@ categories: "note"
 
 ---
 
-# 安装
+## 安装
 
 这个就略过啦，因为我已经安装好了。
 
-# 初步
+## 初步
 
 ```
 git init
@@ -28,12 +28,131 @@ git commit
 
 这些命令我已经会了，就直接略过。
 
-# 前进和回退
+其中`git diff`这个命令还是有点要掌握的，如果需要查看一个文件在两个版本的之间的差异，可以再开一个终端窗口，用`git log `命令调出各个版本的代号，然后在另外一个终端窗口中用`git diff commit1 commit2 file`来查看差异。
+
+## 前进和回退
 
 ```
 git log # 列出所有的版本，HEAD表示当前版本
 git log --pretty=oneline # 列出所有版本的简化信息
 git reset HEAD^ # 回退到上个版本。 HEAD^^回退到上两个版本，HEAD~100回退到前100个版本。或者可以提供版本号，版本号不一定要写全。
-git reflog # 可以看到版本操作的记录，里面可以查到对应版本的编号
+git reflog # 可以看到版本操作的记录，里面可以查到对应版本的编号。
 ```
 
+## 工作区和暂存区
+
+工作区就是目前在工作的内容，是文件夹里可以看到的内容。在`git add`把文件添加到暂存区后，变化就给暂时留存在暂存区。然后`git commit`命令就会把变化实际提交给分支。
+
+**注意，git add之后如果没有commit，而是对文件进行了进一步的修改，然后再commit，这样不会提交最后进行的修改。**
+
+## 撤销修改
+
+这个得分两种情况：
+
+1. 如果修改只在工作区并没有用`git add`添加到暂存区。
+
+   `git checkout -- filename`可以撤销对于文件的修改。
+
+2. 如果已经使用了`git add`添加修改到了暂存区
+
+   `git reset HEAD filename`可以将文件推出暂存区，然后可以用`1`里面的方法进一步撤销对于文件的修改。
+
+如果已经commit了那就用`前进和回退`中的方式来回退版本吧。
+
+## 删除文件
+
+`git rm file`删除即可，后面还要用`git commit`来提交这个修改才会被保留。
+
+如果文件给误删了，可以用`git checkout -- filename`来从版本库中恢复。
+
+## 远程仓库
+
+```
+git remote add origin remote repository URL #添加远程仓库到现地
+git push -u origin main #把现地修改推送到远程仓库，这是第一次使用时的写法，以后只要git push就可以了。
+```
+
+在远程先建一个仓库，然后在本地用`git clone`是更好的选择。
+
+## 分支管理
+
+这个功能是我学习Git最直接的理由了，终于到这一块了。
+
+`git checkout -b dev` #创建并切换到`dev`分支。
+
+相当于
+
+```
+git branch dev
+git checkout dev
+```
+
+`git branch`命令可以列出所有的分支。
+
+`git checkout`和之前的撤销修改的命令容易混淆，用`git switch`更容易理解一些。
+
+在分支上工作完成后，可以切换后主线，然后用`git merge branchname`来进行合并。
+
+```
+git branch name #新建
+git checkout branchname
+git switch branchname # 这两个都是切换分支
+git checkout -b branchname
+git switch -c branchname # 这两个都是新建并切换
+git branch -d branchname # 删除分支
+git merge branchname # 合并分支到当前分支
+```
+
+如果合并中发生文件冲突，可以手工修改后再合并。
+
+>合并分支时，加上`--no-ff`参数就可以用普通模式合并，合并后的历史有分支，能看出来曾经做过合并，而`fast forward`合并就看不出来曾经做过合并。
+>在实际开发中，我们应该按照几个基本原则进行分支管理：
+> 首先，`master`分支应该是非常稳定的，也就是仅用来发布新版本，平时不能在上面干活；
+> 那在哪干活呢？干活都在`dev`分支上，也就是说，`dev`分支是不稳定的，到某个时候，比如1.0版本发布时，再把`dev`分支合并到`master`上，在`master`分支发布1.0版本；
+> 你和你的小伙伴们每个人都在`dev`分支上干活，每个人都有自己的分支，时不时地往`dev`分支上合并就可以了。
+> 所以，团队合作的分支看起来就像这样：
+
+![git-br-policy](../assets/images/branch 20201103134824.png)
+
+## Bug分支
+
+如果急着要修复bug，而手上的工作没有完成，可以先用`git stash`把工作暂存起来。修复完成后可以用`git pop`来恢复工作。
+
+`git cherry-pick <commit>`可以将修补复制到其他分支。
+
+## Feature分支
+
+开发一个新功能，最好新建一个feature分支，开发完成后，合并，删除分支。
+
+如果分支没有合并，但是需要删除，可以用`git branch -D branchname`来删除。
+
+## 多人协作
+
+这个暂时用不上，空了再学。
+
+## Rebase
+
+这个暂时也用不上。
+
+## Tag
+
+tag的作用是给版本一个容易记忆的名字，如`版本1.0`。
+
+```
+git tag <tagname> # 设置tag，默认tag会打到最近提交的commit上
+git tag # 显示所有的tag
+git tag <tagname> <commit id> # 将tag打到指定的commit上
+git tag -a <tagname> -m <message> <commit id> # 也可以给tag加入信息
+git show <tagname> # 显示tag详情
+git tag -d <tagname> # 删除tag
+git push origin <tagname> # 推送tag到远程仓库
+git push origin --tags # 推送所有tag到远程仓库
+git tag -d <tagname> # 删除本地tag
+git push origin :refs/tags/<tagname> # 删除远程仓库的tag	
+```
+
+## .gitignore文件
+
+可以将文件名规则添加到`.gitignore`中让Git不要跟踪一些特殊的文件。
+
+`!rule`强制添加，或者`git add -f <file>`也可以。
