修复图片链接。

--- a/_posts/2020-10-22-git.md
+++ b/_posts/2020-10-22-git.md
@@ -4,6 +4,7 @@ title: "Git 学习笔记"
 date: 2020-10-18
 Author: 'dax'
 categories: "note"
+typora-root-url: ../../bestdax.github.io
 ---
 
 昨天君君让我给菜多也做一份算术练习题，`3×8+9=`这种，还要混合两位数的加减法，最好各50题。而最近双双也在学习10以内的加减法，以前专门为多多写的那个自动生成100道题目的程序就不适用了。想要在现有的基础上修改，又怕到时没写好的情况又要给多多打印试题，就想琢磨琢磨怎么利用`Git`的分枝管理来实现。虽然目前也时常用一些基础的`Git`命令来写`GitHub Pages`的博客，但是`Git`真的没有怎么学过，觉得还是有必要仔细学习一下这个非常重要的技能。
@@ -112,7 +113,7 @@ git merge branchname # 合并分支到当前分支
 > 你和你的小伙伴们每个人都在`dev`分支上干活，每个人都有自己的分支，时不时地往`dev`分支上合并就可以了。
 > 所以，团队合作的分支看起来就像这样：
 
-![git-br-policy](../assets/images/branch 20201103134824.png)
+<img src="/assets/images/branch 20201103134824.png" alt="branch 20201103134824" style="zoom:90%;" />
 
 ## Bug分支
 
@@ -156,3 +157,4 @@ git push origin :refs/tags/<tagname> # 删除远程仓库的tag
 可以将文件名规则添加到`.gitignore`中让Git不要跟踪一些特殊的文件。
 
 `!rule`强制添加，或者`git add -f <file>`也可以。
+
