增加内容： 将新增的修改提交到之前的commit上。

--- a/_posts/2020-10-22-git.md
+++ b/_posts/2020-10-22-git.md
@@ -158,3 +158,6 @@ git push origin :refs/tags/<tagname> # 删除远程仓库的tag
 
 `!rule`强制添加，或者`git add -f <file>`也可以。
 
+## 添加更改到之前的commit
+
+有时修改之后，commit，push到远程之后，发现还有点小错误需要修改，为了这个重新弄个commit有点不值。可以用`git commit -amend`命令来提交，如果不需要编辑commit信息的话可以直接用`git commit --amend --no-edit`。然后推送的时候需要用`git push -f`来强制推送。
